syntax = "proto3";

option go_package = "pkg/grpc";

package myapp;

service GreetingService {
  // Unary RPC
  rpc Hello (HelloRequest) returns (HelloResponse);
  // Server streaming RPC
  rpc HelloServerStream (HelloRequest) returns (stream HelloResponse);
  // Client streaming RPC
  rpc HelloClientStream (stream HelloRequest) returns (HelloResponse);
  // Bidirectional streaming RPC
  rpc HelloBiStreams (stream HelloRequest) returns (stream HelloResponse);
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}
